log
Sat, Mar 29, 2025  5:18:49 PM: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|5
total_score: 10/70
25021aa
Sat, Mar 29, 2025  6:10:45 PM: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|0
8af6a10
Sat, Mar 29, 2025  6:11:54 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
6411689
Sat, Mar 29, 2025  6:14:26 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
e3f2a9e
Sat, Mar 29, 2025  6:31:07 PM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  6|4
total_score: 25/70
c4bddef
Sat, Mar 29, 2025  6:33:31 PM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
a68d2ea
Sat, Mar 29, 2025  9:52:34 PM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
23344ae
Sat, Mar 29, 2025 10:34:00 PM: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|0
ffc5bee
Sat, Mar 29, 2025 10:38:08 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
ee31aca
Sat, Mar 29, 2025 10:41:14 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
b38c858
Sat, Mar 29, 2025 10:59:06 PM: 
 list.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  11|1
total_score: 55/70
87b274f
Sat, Mar 29, 2025 11:04:16 PM: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:140:23: error: 'return' with no value, in function returning non-void [-Werror]
     if (list == NULL) return;
                       ^~~~~~
list.c:139:8: note: declared here
 void * popCurrent(List * list) {
        ^~~~~~~~~~
list.c:141:16: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     int dato = list -> current -> data;
                ^~~~
list.c:146:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return dato;
            ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5d76246
Sat, Mar 29, 2025 11:14:53 PM: 
 list.c | 27 +++++++++++++++++++++++----
 1 file changed, 23 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:140:50: error: 'return' with no value, in function returning non-void [-Werror]
     if (list == NULL || list -> current == NULL) return;
                                                  ^~~~~~
list.c:139:8: note: declared here
 void * popCurrent(List * list) {
        ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
132d9a9
Sat, Mar 29, 2025 11:20:03 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
7f96063
